# mac-dev-clean

./: .gitignore  APP_STORE_CONNECT.md  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  release.sh  run_gui.sh  run_local.sh  update_app.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  cleanup_rule_request.yml
.github/workflows/: ci.yml
docs/: NATIVE_MACOS_APP.md  OPENAI_CODEX_OSS.md  OPEN_SOURCE_AUDIT.md
macos/: Package.swift  project.yml
macos/AppBundle/: AppIcon.icns  Info.plist
macos/MacDevClean.xcodeproj/: project.pbxproj
macos/MacDevClean.xcodeproj/xcshareddata/xcschemes/: MacDevCleanApp.xcscheme
macos/Sources/MacDevCleanApp/: AppModel.swift  Backend.swift  ContentView.swift  MacDevCleanApp.swift  Models.swift
macos/Tests/MacDevCleanAppTests/: ModelTests.swift
scripts/: audit_public_repo.sh  build_macos_app.sh  configure_notarization.sh  notarize_macos_app.sh  release.py
src/mac_dev_clean/: __init__.py  age.py  cleaner.py  cli.py  model.py  output.py  scanner.py  sim_prune.py  xcode_sim_prune.py
tests/: test_age.py  test_cli.py  test_output.py  test_release_script.py  test_scanner_cleaner.py  test_sim_prune.py  test_xcode_sim_prune_cli.py
